--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 
-<title>GGPLOT</title>
+<title>HOME</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -412,78 +412,75 @@ div.tocify {
 
 
 
-<h1 class="title toc-ignore">GGPLOT</h1>
+<h1 class="title toc-ignore">HOME</h1>
 
 </div>
 
 
-<pre class="r"><code>library(ggplot2)
-
-# add &quot;each&quot; to keep both copies of the names together 
-Names &lt;- rep(c(&quot;Dara&quot;,&quot;Azalea&quot;,&quot;Barbi&quot;,&quot;Rowena&quot;,&quot;Fiona&quot;),each=2)
-MF &lt;- rnorm(10,45,25) 
-Condition &lt;- rep(c(&quot;Social&quot;,&quot;Nonsocial&quot;),5)
-# &quot;times=&quot; to repeat how many times you want A and N_A to be repeated 
-Aversity &lt;- rep(c(&quot;A&quot;,&quot;N_A&quot;),times=c(4,6))
-plot_df&lt;- data.frame(Names, MF, Condition) 
-
-ggplot(plot_df, aes(x=Condition, y=MF, group=Names, linetype=Aversity))+ 
-  geom_line()+
-  geom_text(label=Names)+
-  theme_classic()</code></pre>
-<p><img src="Ggplot_files/figure-html/unnamed-chunk-1-1.png" width="672" /></p>
-<pre class="r"><code>library(ggplot2)
-Average_Frequency_of_Social_Risk = a &lt;- c(0,.75,45,5,50,45,60,50)
-Average_Frequency_of_NonSocial_Risk = b&lt;- c(11,5,.75,45,25,55,60,55)
-plot_df &lt;- data.frame(a,b)
-
-# basic scatterplot
-ggplot(plot_df, aes(x=Average_Frequency_of_Social_Risk,
-    y=Average_Frequency_of_NonSocial_Risk))+
- geom_smooth(method=lm)+
- theme_classic()+
-  geom_point()</code></pre>
-<p><img src="Ggplot_files/figure-html/unnamed-chunk-2-1.png" width="672" /></p>
-<pre class="r"><code>library(ggplot2)
-factor_one &lt;- rep(as.factor(c(&quot;4:6&quot;,&quot;6:9&quot;,&quot;4:9&quot;)),2)
-factor_two &lt;- rep(as.factor(c(&quot;Wide Base&quot;,&quot;Wide Top&quot;)),3)
-dv_means &lt;- c(20,30,40,20,40,40)
-dv_SEs   &lt;- c(4,3.4,4,3,2,4)
-plot_df &lt;- data.frame(factor_one,
-                      factor_two,
-                      dv_means,
-                      dv_SEs)
-# basic bar graph
-ggplot(plot_df, aes(x=factor_one,y=dv_means,
-                    group=factor_two,
-                    color=factor_two))+
-  geom_bar(stat=&quot;identity&quot;, position=&quot;dodge&quot;)</code></pre>
-<p><img src="Ggplot_files/figure-html/unnamed-chunk-3-1.png" width="672" /></p>
-<pre class="r"><code># adding error bars, customizing
-ggplot(plot_df, aes(x=factor_one,y=dv_means,
-                group=factor_two,
-                    
-color=factor_two,                    fill=factor_two))+    
-  geom_bar(stat=&quot;identity&quot;, position=&quot;dodge&quot;)+
-  geom_errorbar(aes(ymin=dv_means-dv_SEs,
-                    ymax=dv_means+dv_SEs),
-                position=position_dodge(width=0.9),
-                width=.2,
-                color=&quot;black&quot;)+
-  coord_cartesian(ylim=c(0,100))+
-  xlab(&quot;Top-to-Base Ratio&quot;)+
-  ylab(&quot;Estimate(xids)&quot;)+
-  ggtitle(&quot;&quot;)+
-  theme_classic(base_size=12)+
-  theme(plot.title = element_text(hjust = 0.5))</code></pre>
-<p><img src="Ggplot_files/figure-html/unnamed-chunk-3-2.png" width="672" /></p>
-<pre class="r"><code>score &lt;- rnorm(100,0,1)
-n &lt;- 1:100
-plot_df &lt;- data.frame(score,n)
-ggplot(plot_df, aes(x=score))+
-  geom_histogram(bins=10,
-                 color=&quot;white&quot;)</code></pre>
-<p><img src="Ggplot_files/figure-html/unnamed-chunk-4-1.png" width="672" /></p>
+<div id="norlander-wilson-journal" class="section level2">
+<h2>Norlander Wilson Journal</h2>
+</div>
+<div id="email" class="section level2">
+<h2>Email:</h2>
+<p><a href="mailto:Norlander3@gmail.com">Norlander3@gmail.com</a></p>
+</div>
+<div id="education" class="section level2">
+<h2>EDUCATION</h2>
+<p>May, 2020 M.A. Experimental Psychology CUNY Brooklyn College</p>
+<p>May, 2016 B.S. Psychology CUNY Brooklyn College<br />
+Major: Psychology Minor: Neuroscience Concentration: Premed courses</p>
+</div>
+<div id="research-experience" class="section level2">
+<h2>RESEARCH EXPERIENCE</h2>
+<div id="faculty-supervisor-angelo-dibello" class="section level3">
+<h3>Faculty Supervisor: Angelo Dibello</h3>
+</div>
+<div id="social-health-addiction-lab" class="section level3">
+<h3>Social Health &amp; Addiction Lab</h3>
+<ul>
+<li><p>Research and collects data through complex techniques and procedures.</p></li>
+<li><p>Interprets, synthesizes and analyzes data.</p></li>
+<li><p>Plans and modifies research techniques, procedures, tests, equipment or software management.</p></li>
+<li><p>Writes and edits materials for publication and presentation.</p></li>
+<li><p>Meets with faculty supervisor on regular basis to maintain ongoing communication regarding the quality of the assistant’s performance.</p></li>
+<li><p>Performs other related duties as required.</p></li>
+</ul>
+</div>
+</div>
+<div id="thesis-advisor-angelo-dibello" class="section level2">
+<h2>Thesis Advisor: Angelo Dibello</h2>
+<div id="research-project" class="section level3">
+<h3>Research Project:</h3>
+<ul>
+<li>A Study Of Mistrust In the African American Participants.</li>
+</ul>
+</div>
+</div>
+<div id="faculty-supervisor-guillermo-esber" class="section level2">
+<h2>Faculty Supervisor: Guillermo Esber</h2>
+<div id="behavioral-neurobiology-learning-lab" class="section level3">
+<h3>Behavioral Neurobiology Learning Lab</h3>
+<ul>
+<li><p>Prepping Skinner Boxes using Meta-associates</p></li>
+<li><p>Monitoring weight of rats for data collection</p></li>
+<li>Tracks rats progress using Meta-associates</li>
+<li><p>Feeding rats based on weight</p></li>
+<li><p>Organization of lab</p></li>
+<li><p>Assembling simple circuits and testing</p></li>
+</ul>
+</div>
+</div>
+<div id="pre-med-advisor--brahmadeo-dewprashad" class="section level2">
+<h2>Pre-Med Advisor- Brahmadeo Dewprashad</h2>
+<div id="research-project-the-poisonous-nature-of-the-mammea-americana-seed" class="section level3">
+<h3>Research Project: The poisonous nature of the Mammea Americana Seed</h3>
+<ul>
+<li><p>Research and review scientific articles that attempted to extract poisonous compound and compose a summarizations of each article.</p></li>
+<li><p>Locate and obtain Mammea Americana for purposes of testing</p></li>
+<li><p>Monthly meeting with advisor to review progress with obtain the fruit</p></li>
+</ul>
+</div>
+</div>
 
 
 
